[package]
name = "kvp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
lambda_http = "0.5.1"
serde = "1.0.126"
tokio = "1.6.1"
serde_json = "1.0.79"
serde_derive = "1.0.136"
aws-sdk-dynamodb = "0.10.1"
aws-config = "0.10.1"
http = "0.2.6"
chrono = "0.4.19"
json-patch = "0.2.6"
